--- a/src/index.html
+++ b/src/index.html
@@ -8,17 +8,36 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load ="partials/header.html" />
 
-    <section>
-      <h1>Example page title</h1>
-      <!-- Path to images as from index.html file -->
-      <img src="./img/javascript.svg" alt="" />
-    </section>
+    <section class="search-section">  
+    <form class="search-form js-search-form" name="searchImageForm">      
+        <input
+          class="js-search-input"
+          type="text"
+          name="searchQuery"
+          required
+          placeholder="Search images..."
+          aria-label="Recipient's username"
+          aria-describedby="button-addon2"
+        />
+        <button
+          class="btn btn-outline-success"
+          type="submit"
+          id="button-addon2"
+        >
+          Search photo
+        </button>
+    </form>
+</section>
 
-    <!-- Loads the specified .html file -->
-    <load ="partials/vite-promo.html" />
-
+    <section class="gallery">
+    <div class="gallery-list js-gallery"
+    ></div>
+    <span class="loader js-loader is-hidden"></span>
+     <button class="load-more js-load-more is-hidden">Load more</button>
+  </section>
+   
+   
     <script type="module" src="./main.js"></script>
   </body>
 </html>
